--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>如果你看到这个，说明只是一个测试版本</h1>
-    <a href="cc.voup.cn">游戏资源网站</a><br>
+    <a href="https://cc.voup.cn/">游戏资源网站</a><br>
     <a href="https://www.kdocs.cn/l/ctS4yqwpmZcZ">影视动漫文档</a>
 </body>
 </html>
